Showing page masonary; styling

--- a/client/templates/artists/artists.html
+++ b/client/templates/artists/artists.html
@@ -1,6 +1,6 @@
 <template name="artists">
   <div class="page-header" style="background-image: url();">
-  	<h1>Artists</h1>
+  	<h1 class="h1">Artists</h1>
 	</div>
 
   <div class="container">
