--- a/client/templates/homepage/homepage.html
+++ b/client/templates/homepage/homepage.html
@@ -10,7 +10,7 @@
                     {{> accounts tpl="loginDropdown"}}
                 {{/if}}
 
-	            <h3 class="h3 current-show-title">Current Show</h3>
+	            <h3 class="h3 current-show-label">Current Show</h3>
 
                 <h2 class="h2 show-tag-title">{{showTag.name}}</h2>
 
