--- a/client/themes/10a/10a.import.less
+++ b/client/themes/10a/10a.import.less
@@ -15,6 +15,7 @@
 // Pages
 @import "homepage/homepage.import.less";
 @import "artists/artists.import.less";
+@import "showing/showing.import.less";
 
 // Products
 @import "products/products.import.less";
