--- a/client/themes/10a/common.import.less
+++ b/client/themes/10a/common.import.less
@@ -3,7 +3,7 @@ body {
 	padding-bottom: 60px;
 	font-family: @serif;
 	font-size: 16px;
-	.black-85;
+	.black-80;
 }
 
 body.hide-header {
@@ -14,6 +14,16 @@ body.hide-header {
 	padding: 30px;
 }
 
+.lead {
+	font-size: 19px;
+	margin-bottom: 40px;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+}
+
 
 /**
 * Headings
@@ -21,7 +31,18 @@ body.hide-header {
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-	.black-80;
+	.black-75;
+}
+
+.current-show-label {
+	margin-bottom: 0;
+	font-size: 18px;
+}
+
+.show-tag-title {
+	font-size: 32px;
+	margin-top: 10px;
+	margin-bottom: 30px;
 }
 
 
