--- a/client/themes/10a/header/header.import.less
+++ b/client/themes/10a/header/header.import.less
@@ -37,16 +37,18 @@ main{
 }
 
 
-.page-header{
+.page-header {
     background-color: @black;
     color: @white;
     padding: 20px 15px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    margin-top: 0;
+    margin: 0;
 
-    h1{
+    .h1 {
+		font-family: @sans_serif;
+        font-weight: bold;
         color: @white;
         font-size: 29px;
         text-transform: uppercase;
