--- a/client/templates/showing/showing.html
+++ b/client/templates/showing/showing.html
@@ -28,7 +28,7 @@
                                 {{#each print in artist.prints}}
                                     <div class="print grid-item col-xs-6">
                                         {{#with media print}}
-                                            <img src="{{url store='image'}}" alt="{{print.title}}" class="print-image">
+                                            <img src="{{url store='medium'}}" alt="{{print.title}}" class="print-image">
                                         {{else}}
                                             <div class="product-image" style="background-image: url(/resources/placeholder.gif)"></div>
                                         {{/with}}
