--- a/client/templates/artists/artists.html
+++ b/client/templates/artists/artists.html
@@ -19,7 +19,7 @@
                   {{#each print in artist.prints}}
                     <div class="swiper-slide">
                       {{#with media print}}
-                        <div class="product-image" style="background-image: url('{{url store='large'}}')"></div>
+                        <div class="product-image" style="background-image: url('{{url store='medium'}}')"></div>
                       {{else}}
                         <div class="product-image" style="background-image: url(/resources/placeholder.gif)"></div>
                       {{/with}}
