--- a/client/templates/homepage/artistSlides.html
+++ b/client/templates/homepage/artistSlides.html
@@ -9,7 +9,7 @@
 						<div class="print">
 
 							{{#with media print}}
-								<div class="product-image" style="background-image: url('{{url store='large'}}')"></div>
+								<div class="product-image" style="background-image: url('{{url store='medium'}}')"></div>
 							{{else}}
 								<div class="product-image" style="background-image: url(/resources/placeholder.gif)"></div>
 							{{/with}}
