--- a/client/templates/homepage/showSlides.html
+++ b/client/templates/homepage/showSlides.html
@@ -8,7 +8,7 @@
 						<div class="product-primary-images show-product-images">
 							<a href="{{pathFor 'product' q=_id}}">
 								{{#with media}}
-									<div class="product-image" style="background-image: url('{{url store='large'}}')"></div>
+									<div class="product-image" style="background-image: url('{{url store='medium'}}')"></div>
 								{{else}}
 								  <div class="product-image" style="background-image: url(/resources/placeholder.gif)"></div>
 								{{/with}}
