--- a/client/themes/10a/homepage/homepage.import.less
+++ b/client/themes/10a/homepage/homepage.import.less
@@ -2,29 +2,29 @@
 * Home swiper
 */
 .swiper-container {
-    .swiper-slide {
-        background-color: @black;
-        padding: 10px;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center center;
-        min-height: 330px;
+	.swiper-slide {
+		background-color: @black;
+		padding: 10px;
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: center center;
+		min-height: 330px;
 
-        .slide-title,
-        .slide-subtitle,
-        .slide-caption,
-        .slide-link {
-            color: @white;
-        }
+		.slide-title,
+		.slide-subtitle,
+		.slide-caption,
+		.slide-link {
+			color: @white;
+		}
 
-        .slide-link {
-            text-transform: uppercase;
-            border: 1px solid @white;
-            border-radius: 0;
-            display: inline-block;
-            padding: 5px 30px;
-            font-size: 16px;
-        }
+		.slide-link {
+			text-transform: uppercase;
+			border: 1px solid @white;
+			border-radius: 0;
+			display: inline-block;
+			padding: 5px 30px;
+			font-size: 16px;
+		}
 
 		.slide-title,
 		.slide-subtitle {
@@ -33,26 +33,26 @@
 			text-transform: uppercase;
 		}
 
-        .slide-title {
-            font-size: 29px;
-            margin-top: 0;
-            line-height: 1.25em;
-            margin-bottom: 16px;
-        }
+		.slide-title {
+			font-size: 29px;
+			margin-top: 0;
+			line-height: 1.25em;
+			margin-bottom: 16px;
+		}
 
-        .slide-subtitle {
-            font-size: 15px;
-            margin-bottom: 16px;
-        }
+		.slide-subtitle {
+			font-size: 15px;
+			margin-bottom: 16px;
+		}
 
-        .slide-caption {
-            margin-bottom: 16px;
-        }
-    }
+		.slide-caption {
+			margin-bottom: 16px;
+		}
+	}
 
-    .swiper-pagination-bullet {
-        background-color: rgba(255,255,255,0.75);
-    }
+	.swiper-pagination-bullet {
+		background-color: rgba(255,255,255,0.75);
+	}
 }
 
 
@@ -86,8 +86,8 @@
 	}
 
 	.print {
+		width: 30vh;
 		float: left;
-		margin-right: 20px;
 	}
 
 	.artist-name {
