Artist swiper styling

--- a/client/themes/10a/artists/artists.import.less
+++ b/client/themes/10a/artists/artists.import.less
@@ -1,6 +1,11 @@
 .artist-swiper-container {
 	overflow: hidden;
 
+	.swiper-slide {
+		width: 30vh;
+		height: 30vh;
+	}
+
 	.product-image {
 		height: 30vh;
 		background-size: cover;
