--- a/client/templates/artists/artists.html
+++ b/client/templates/artists/artists.html
@@ -18,15 +18,17 @@
 
                   {{#each print in artist.prints}}
                     <div class="swiper-slide">
-                      {{#with media print}}
-                        <div class="product-image" style="background-image: url('{{url store='medium'}}')"></div>
-                      {{else}}
-                        <div class="product-image" style="background-image: url(/resources/placeholder.gif)"></div>
-                      {{/with}}
+											<a href="{{pathFor 'product' _id=print._id}}">
+	                      {{#with media print}}
+	                        <div class="product-image" style="background-image: url('{{url store='medium'}}')"></div>
+	                      {{else}}
+	                        <div class="product-image" style="background-image: url(/resources/placeholder.gif)"></div>
+	                      {{/with}}
 
-                      <h3 class="h3">{{print.title}}</h3>
-                      <p class="print-year">{{printYear print._id}}</p>
-                      <p class="description">{{print.description}}</p>
+	                      <h3 class="h3">{{print.title}}</h3>
+	                      <p class="print-year">{{printYear print._id}}</p>
+	                      <p class="description">{{print.description}}</p>
+											</a>
                     </div>
                   {{/each}}
 
