--- a/client/templates/layout/header/header.html
+++ b/client/templates/layout/header/header.html
@@ -4,6 +4,8 @@
 		<div class="col-xs-6 back-button">
 			<a class="btn btn-default btn-circle"><i class="glyphicon glyphicon-chevron-left"></i></a>
 		</div>
+
+		{{! Search: comming soon to an app near you...
 		<div class="col-xs-6 search-box text-right">
 			<form class="form-inline">
 				<div class="input-group">
@@ -16,5 +18,7 @@
 				</div>
 			</form>
 		</div>
+		}}
+
 	</div>
 </template>
