Cart badge styling

--- a/client/themes/10a/footer/footer.import.less
+++ b/client/themes/10a/footer/footer.import.less
@@ -71,6 +71,7 @@ footer.reaction-navigation-footer {
 						background-color: darken(@cart-icon-bgc, 20%);
 						right: 5px;
 						bottom: auto;
+						top: 18px;
 					}
 				}
 			}
