--- a/client/templates/products/productDetail/productDetail.html
+++ b/client/templates/products/productDetail/productDetail.html
@@ -55,10 +55,10 @@
 					<div class="col-sm-5 pdp-left-column">
 						{{> productImageGallery}}
 
-						<h3 data-i18n="productDetail.tags">Tags</h3>
+						<h3 class="h3" data-i18n="productDetail.tags">Tags</h3>
 						{{>tagsComponent tags=tags}}
 
-						<h3 data-i18n="productDetail.details">Details</h3>
+						<h3 class="h3" data-i18n="productDetail.details">Details</h3>
 						{{> metaComponent }}
 					</div>
 					<!-- END Left Side -->
@@ -67,34 +67,13 @@
 					<div class="col-sm-7 pdp-right-column">
 
 						<div class="row social-pricing">
-							<div class="col-xs-8">
+							<div class="col-xs-12">
 								{{!-- Price Fixation --}}
 								<span class="price">
 									<span id="price" itemprop="price">{{formatPrice actualPrice}}</span>
 								</span>
 
 								{{>fieldComponent field="vendor" value=vendor}}
-							</div>
-
-							<div class="col-xs-3 col-xs-offset-1">
-								{{!-- Social Commentary --}}
-								{{#if hasPermission "createProduct"}}
-									<div class="social-media">
-										<a href="#"><i class="fa fa-facebook fa-lg"></i></a>
-										<a href="#"><i class="fa fa-twitter fa-lg"></i></a>
-										<a href="#"><i class="fa fa-pinterest fa-lg"> </i></a>
-										<a href="#"><i class="fa fa-google-plus fa-lg"></i></a>
-
-										<div class="social-media-inputs">
-											{{>fieldComponent field="facebookMsg" value=facebookMsg}}
-											{{>fieldComponent field="twitterMsg" value=twitterMsg}}
-											{{>fieldComponent field="pinterestMsg" value=pinterestMsg}}
-											{{>fieldComponent field="googleplusMsg" value=googleplusMsg}}
-										</div>
-									</div>
-								{{else}}
-									{{> productSocial }}
-								{{/if}}
 							</div>
 						</div>
 
@@ -108,7 +87,7 @@
 
 							{{!-- Variants & Options --}}
 							<div class="row options-add-to-cart">
-								<h3 data-i18n="productDetail.options">Options</h3>
+								<h3 class="h3" data-i18n="productDetail.options">Options</h3>
 								{{>variantList}}
 							</div>
 
@@ -135,6 +114,9 @@
 
 				</div>
 			</div>
+
+			{{> linkedProducts}}
+
 		</div>
 	</div>
 </template>
