Added links to linked products

--- a/client/templates/products/productDetail/linkedProducts/linkedProducts.html
+++ b/client/templates/products/productDetail/linkedProducts/linkedProducts.html
@@ -7,14 +7,16 @@
 			<div class="row grid current-show">
 				{{#each otherShowWorks}}
 				<div class="col-sm-6 print grid-item">
-					{{#with media}}
-					<img src="{{url store='medium'}}" alt="{{title}}" class="print-image">
-					{{else}}
-					<div class="product-image placeholder" style="background-image: url(/resources/placeholder.gif)"></div>
-					{{/with}}
+					<a href="{{pathFor 'product' q=_id}}">
+						{{#with media}}
+						<img src="{{url store='medium'}}" alt="{{title}}" class="print-image">
+						{{else}}
+						<div class="product-image placeholder" style="background-image: url(/resources/placeholder.gif)"></div>
+						{{/with}}
 
-					<h4 class="h4">{{title}}</h4>
-					<h5 class="h5"><em>{{toTitleCase(printsArtistName _id)}}</em>, {{printYear _id}}</h5>
+						<h4 class="h4">{{title}}</h4>
+						<h5 class="h5"><em>{{toTitleCase(printsArtistName _id)}}</em>, {{printYear _id}}</h5>
+					</a>
 				</div>
 				{{/each}}
 			</div>
@@ -24,13 +26,15 @@
 			<div class="row grid artist">
 				{{#each artistOtherWorks}}
 				<div class="col-sm-6 print grid-item">
-					{{#with media}}
-					<img src="{{url store='medium'}}" alt="{{title}}" class="print-image">
-					{{else}}
-					<div class="product-image placeholder" style="background-image: url(/resources/placeholder.gif)"></div>
-					{{/with}}
+					<a href="{{pathFor 'product' q=_id}}">
+						{{#with media}}
+						<img src="{{url store='medium'}}" alt="{{title}}" class="print-image">
+						{{else}}
+						<div class="product-image placeholder" style="background-image: url(/resources/placeholder.gif)"></div>
+						{{/with}}
 
-					<h4 class="h4">{{title}}, {{printYear _id}}</h4>
+						<h4 class="h4">{{title}}, {{printYear _id}}</h4>
+					</a>
 				</div>
 				{{/each}}
 			</div>
