--- a/client/themes/10a/footer/footer.import.less
+++ b/client/themes/10a/footer/footer.import.less
@@ -15,7 +15,7 @@ footer.reaction-navigation-footer {
 		font-family: @sans_serif;
 		font-size: 12px;
 
-		@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+		@media (min-width: @screen-sm-min) {
 			font-size: 16px;
 		}
 
