--- a/client/templates/artists/artists.html
+++ b/client/templates/artists/artists.html
@@ -3,7 +3,7 @@
   	<h1 class="h1">Artists</h1>
 	</div>
 
-  <div class="container">
+  <div class="container-main">
       <div class="row">
 
         <div class="col-sm-12">
