Artists names to uppercase

--- a/client/templates/homepage/artistSlides/artistSlides.html
+++ b/client/templates/homepage/artistSlides/artistSlides.html
@@ -23,7 +23,7 @@
 			<div class="product-image" style="background-image: url(/resources/placeholder.gif)"></div>
 		{{/with}}
 
-		<h3 class="h3 artist-name">{{artist}}</h3>
+		<h3 class="h3 artist-name">{{toUpperCase(artist)}}</h3>
 		<h4 class="h4 print-title"><em>{{title}}</em>, {{printYear _id}}</h4>
 		<p class="description">{{description}}</p>
 	</div>
