--- a/client/templates/artists/artists.html
+++ b/client/templates/artists/artists.html
@@ -4,43 +4,44 @@
 	</div>
 
   <div class="container-main">
-      <div class="row">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="prints-by-artist">
+          {{#each artist in printsByArtist}}
 
-        <div class="col-sm-12">
-          <div class="prints-by-artist">
-            {{#each artist in printsByArtist}}
+            <h2 class="h2">{{toTitleCase (artist.name)}}</h2>
+            <p class="black-30"><small><i>Number of prints from this artist: {{artist.prints.length}}</i></small></p>
 
-              <h2 class="h2">{{toTitleCase (artist.name)}}</h2>
-              <p class="black-30"><small><i>Number of prints from this artist: {{artist.prints.length}}</i></small></p>
-
-              <div class="artist-swiper-container">
-                <div class="swiper-wrapper">
-
-                  {{#each print in artist.prints}}
-                    <div class="swiper-slide">
-											<a href="{{pathFor 'product' _id=print._id}}">
-	                      {{#with media print}}
-	                        <div class="product-image" style="background-image: url('{{url store='medium'}}')"></div>
-	                      {{else}}
-	                        <div class="product-image" style="background-image: url(/resources/placeholder.gif)"></div>
-	                      {{/with}}
-
-	                      <h3 class="h3">{{print.title}}</h3>
-	                      <p class="print-year">{{printYear print._id}}</p>
-	                      <p class="description">{{print.description}}</p>
-											</a>
-                    </div>
-                  {{/each}}
-
-                </div>
+            <div class="artist-swiper-container">
+              <div class="swiper-wrapper">
+                {{#each print in artist.prints}}
+                  {{> artistsPrint print}}
+                {{/each}}
               </div>
+            </div>
 
-              <hr>
+            <hr>
 
-            {{/each}}
-          </div>
+          {{/each}}
         </div>
-
       </div>
+    </div>
   </div>
+</template>
+
+
+<template name="artistsPrint">
+	<div class="swiper-slide">
+		<a href="{{pathFor 'product' _id=_id}}">
+			{{#with media}}
+				<div class="product-image" style="background-image: url('{{url store='medium'}}')"></div>
+			{{else}}
+				<div class="product-image" style="background-image: url(/resources/placeholder.gif)"></div>
+			{{/with}}
+
+			<h3 class="h3">{{title}}</h3>
+			<p class="print-year">{{printYear _id}}</p>
+			<p class="description">{{description}}</p>
+		</a>
+	</div>
 </template>
