Updates to linked products (still with error)

--- a/client/templates/products/productDetail/linkedProducts/linkedProducts.html
+++ b/client/templates/products/productDetail/linkedProducts/linkedProducts.html
@@ -6,18 +6,7 @@
 
 			<div class="row grid current-show">
 				{{#each otherShowWorks}}
-					<div class="col-sm-6 print grid-item">
-						<a href="{{pathFor 'product' _id=_id}}">
-							{{#with media}}
-							<img src="{{url store='medium'}}" alt="{{title}}" class="print-image">
-							{{else}}
-							<div class="product-image placeholder" style="background-image: url(/resources/placeholder.gif)"></div>
-							{{/with}}
-
-							<h4 class="h4">{{title}}</h4>
-							<h5 class="h5"><em>{{toTitleCase(printsArtistName _id)}}</em>, {{printYear _id}}</h5>
-						</a>
-					</div>
+					{{> linkedProduct}}
 				{{/each}}
 			</div>
 
@@ -26,21 +15,27 @@
 
 				<div class="row grid artist">
 					{{#each artistOtherWorks}}
-						<div class="col-sm-6 print grid-item">
-							<a href="{{pathFor 'product' _id=_id}}">
-								{{#with media}}
-								<img src="{{url store='medium'}}" alt="{{title}}" class="print-image">
-								{{else}}
-								<div class="product-image placeholder" style="background-image: url(/resources/placeholder.gif)"></div>
-								{{/with}}
-
-								<h4 class="h4">{{title}}, {{printYear _id}}</h4>
-							</a>
-						</div>
+						{{> linkedProduct}}
 					{{/each}}
 				</div>
 			{{/if}}
 
 		</div>
+	</div>
+</template>
+
+
+<template name="linkedProduct">
+	<div class="col-sm-6 print grid-item">
+		<a href="{{pathFor 'product'}}">
+			{{#with media}}
+				<img src="{{url store='medium'}}" alt="{{title}}" class="print-image">
+			{{else}}
+				<div class="product-image placeholder" style="background-image: url(/resources/placeholder.gif)"></div>
+			{{/with}}
+
+			<h4 class="h4">{{title}}</h4>
+			<h5 class="h5"><em>{{toTitleCase(printsArtistName _id)}}</em>, {{printYear _id}}</h5>
+		</a>
 	</div>
 </template>
