--- a/client/templates/homepage/artistSlides/artistSlides.html
+++ b/client/templates/homepage/artistSlides/artistSlides.html
@@ -17,14 +17,16 @@
 
 <template name="artistSlide">
 	<div class="print">
-		{{#with media}}
-			<div class="product-image" style="background-image: url('{{url store='medium'}}')"></div>
-		{{else}}
-			<div class="product-image" style="background-image: url(/resources/placeholder.gif)"></div>
-		{{/with}}
+		<a href="{{pathFor 'product'}}">
+			{{#with media}}
+				<div class="product-image" style="background-image: url('{{url store='medium'}}')"></div>
+			{{else}}
+				<div class="product-image" style="background-image: url(/resources/placeholder.gif)"></div>
+			{{/with}}
 
-		<h3 class="h3 artist-name">{{toUpperCase(artist)}}</h3>
-		<h4 class="h4 print-title"><em>{{title}}</em>, {{printYear _id}}</h4>
-		<p class="description">{{description}}</p>
+			<h3 class="h3 artist-name">{{toUpperCase(artist)}}</h3>
+			<h4 class="h4 print-title"><em>{{title}}</em>, {{printYear _id}}</h4>
+			<p class="description">{{description}}</p>
+		</a>
 	</div>
 </template>
