--- a/client/templates/homepage/showSlides/showSlides.html
+++ b/client/templates/homepage/showSlides/showSlides.html
@@ -14,7 +14,7 @@
 <template name="showSlide">
 	<div class="show-print swiper-slide">
 		<div class="product-primary-images show-product-images">
-			<a href="{{pathFor 'product' q=_id}}">
+			<a href="{{pathFor 'product'}}">
 				{{#with media}}
 					<div class="product-image" style="background-image: url('{{url store='medium'}}')"></div>
 				{{else}}
