Fix for admin dashboard height

--- a/client/themes/10a/10a.import.less
+++ b/client/themes/10a/10a.import.less
@@ -20,3 +20,6 @@
 // Products
 @import "products/products.import.less";
 @import "products/linkedProducts.import.less";
+
+// Admin
+@import "admin/admin.import.less";
