Fixed checkout login responsive styling issues

--- a/client/themes/10a/10a.import.less
+++ b/client/themes/10a/10a.import.less
@@ -21,5 +21,8 @@
 @import "products/products.import.less";
 @import "products/linkedProducts.import.less";
 
+// Checkout
+@import "checkout/checkout.import.less";
+
 // Admin
 @import "admin/admin.import.less";
