--- a/client/templates/cart/cartIcon/cartIcon.html
+++ b/client/templates/cart/cartIcon/cartIcon.html
@@ -1,6 +1,6 @@
 <template name="newCartIcon">
   {{#with cart}}
-    <div class="cart-icon">
+    <div class="show-cart cart-icon">
 
       <span data-event-category="cart"
         data-event-action="cart-click"
