--- a/client/templates/showing/showing.html
+++ b/client/templates/showing/showing.html
@@ -1,6 +1,5 @@
 <template name="showing">
-	{{! TODO: Showing page background image }}
-    <div class="page-header" style="background-image: url();">
+    <div class="page-header" style="background-image: url(/resources/images/Mass,North.jpg);">
 		<h1 class="h1">{{toUpperCase showTag.name}}</h1>
 	</div>
 
@@ -13,10 +12,7 @@
                 {{/if}}
 
                 <h3 class="current-show-label">Current Show</h3>
-
                 <h2 class="show-tag-title">{{showTag.name}}</h2>
-
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
                 <div class="showing-prints">
                     {{#each artist in printsByArtist}}
