Removed "Artists" page background image

--- a/client/templates/artists/artists.html
+++ b/client/templates/artists/artists.html
@@ -1,5 +1,5 @@
 <template name="artists">
-  <div class="page-header" style="background-image: url();">
+  <div class="page-header">
   	<h1 class="h1">Artists</h1>
 	</div>
 
