Replaced image gallery with zoom

--- a/client/themes/10a/products/products.import.less
+++ b/client/themes/10a/products/products.import.less
@@ -2,6 +2,11 @@
 * Single product styling
 */
 
+.product-main-images {
+	list-style-type: none;
+	padding: 0;
+}
+
 .variant-list-item {
 	.progress-bar-success {
 		opacity: 1;
